[package]
name = "ianaio-render"
description = "Convenience crate for working with browser's requestAnimationFrame"
version = "0.2.0"
authors = ["Jaroslaw Cichon <dev.iana.io> IanaIO Rust and WebAssembly Working Group"]
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/ianaio/render"
homepage = "https://rustwasm.iana.io/render"
documentation = "https://docs.iana.io/rustwasm/render"
categories = ["api-bindings", "storage", "wasm"]
rust-version = "1.80"

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Window"]

